# nativqa-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  extract_completed_query.py  merge_all.py  merge_filter_unique.py  prepare_next_qa_queries.py  pyproject.toml  requirements.txt  scraper.py  setup.py
data/: test_query.csv
demo/: README.md  app.js  index.html  styles.css
domain/: annotated_domains.csv
envs/: api_key.env
examples/: run_nativqa_searches.ipynb
nativqa/: __init__.py  __main__.py  extended_query_scrapper.py  main.py  nativqa_framework.py  prepare_next_rs_query.py  prepare_next_seed_query.py  test.py  utils.py
scripts/: GPT_4o_labeling.py  check_domain_reliability.py  download_images.py  filter_near_duplicates_flann.py  template2seeds.py
seed_query_collector/: app.py
seed_query_collector/instance/: sentences.db
seed_query_collector/static/: styles.css
seed_query_collector/templates/: contributors.html  edit.html  index.html  view.html
templates/: arabic_template.csv  english_template.csv
tests/: test_nativqa.py  test_workflow.py
tests/data/: test_query.csv
